Fix overflowing nav

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -24,7 +24,7 @@ nav {
     background-color: rgb(0, 0, 36);
     padding: 0em 0.5em;
     display: block;
-    width: 100%;
+    width: calc(100% - 1em);
 }
 nav a {
     color: limegreen;
